syntax = "proto3";

package messaging;

service Messaging {
    rpc SendMessage(MessageRequest) returns (MessageResponse) {}
    rpc GetMessagesForUser(UserRequest) returns (MessagesForUser) {}
}

message MessageRequest {
    string sender = 1;
    string receiver = 2;
    string text = 3;
}

message MessageResponse {
    string status = 1;
}

message UserRequest {
    string username = 1;
}

message MessagesForUser {
    repeated string messages = 1;
}
